--- a/weather/css/style.css
+++ b/weather/css/style.css
@@ -3,13 +3,13 @@
 }
 .scrolled {
     position: fixed;
-    opacity: 0.5;
+    opacity: 0.8;
     top: 0;
     z-index: 100;
     width: 1140px;
 }
-.scrolled h1 {
-    margin-top: 0;
+.scrolled:hover {
+    opacity: 1;
 }
 .selected {
     background: #85c0cc;
@@ -21,6 +21,9 @@
 }
 .jumbotron div {
     padding: 3px;
+}
+.nav li {
+    font-size: 20px;
 }
 .cards {
     margin-top: 100px;
